build: mysql 의존성 및 테스트 시 java 에이전트 동적 로딩 허용 추가